# ai-studio-server/index.js
@@ -4,7 +4,6 @@ const express = require('express');
 const helmet = require('helmet');
 const morgan = require('morgan');
 const connectDB = require('./config/db'); // Import DB connection
-const userRoutes = require('./modules/user/userRoutes'); // Import user routes
 const authRoutes = require('./modules/auth/authRoutes'); // Import auth routes
 const healthRoutes = require('./modules/health/healthRoutes'); // Import health routes
 
@@ -29,7 +28,6 @@ app.use(express.urlencoded({ extended: true }));
 
 // Routes
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument)); // Swagger UI
-app.use('/api/users', userRoutes); // Use user routes
 app.use('/api/auth', authRoutes); // Use auth routes
 app.use('/api', healthRoutes); // Use health routes
 
