# ai-studio-server/modules/user/userRoutes.js
@@ -1,14 +1,0 @@
-const express = require('express');
-const router = express.Router();
-const {
-  createUser,
-  getUsers,
-  getUserById,
-  updateUser,
-  deleteUser,
-} = require('./userController');
-
-router.route('/').post(createUser).get(getUsers);
-router.route('/:id').get(getUserById).put(updateUser).delete(deleteUser);
-
-module.exports = router;
